--- a/estilos/responsivo.css
+++ b/estilos/responsivo.css
@@ -202,7 +202,7 @@
 
 @media (max-width: 500px){
   main{
-    width: 500px;
+    width: 600px;
   }
 
   .gridSection{
@@ -239,16 +239,21 @@
   footer h4{
     text-align: center;
     background-color:#FBFB06 ;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+    width: 300px;
   }
   
   footer{
-    margin-top: 3rem;
+    
     display: flex;
-    flex-direction: column;
     bottom: 0;
-    max-width: 500px;
+    max-width: 600px;
     height: 20px;
-    align-items: center;
+    margin: 0 auto;
+    margin-top: 3rem;
   }
 
 }
