--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-body{
+body {
   padding: 0;
   margin: 0;
-  max-width: 100vw;
+  min-width: 100%;
   height: 1170px;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
@@ -12,36 +12,36 @@ header {
   justify-content: space-between;
 }
 
-#logo{
+#logo {
   border-radius: 50%;
   margin-top: 2rem;
   margin-left: 149px;
 }
 
-.cabecalho{
+.cabecalho {
   display: flex;
   flex-wrap: wrap;
-  background-color:#FBFB06 ;
+  background-color: #FBFB06;
   max-width: 350px;
   max-height: 50px;
   margin-top: 6rem;
   margin-right: 149px;
 }
 
-a{
+a {
   margin: 1.2rem;
   list-style: none;
   text-decoration: none;
   color: black;
 }
 
-.cabecalho li:hover{
+.cabecalho li:hover {
   background-color: #F50F0F;
   color: #FBFB06;
   cursor: pointer;
 }
 
-.tituloSecao{
+.tituloSecao {
   background-color: #FBFB06;
   display: flex;
   justify-content: space-between;
@@ -50,23 +50,24 @@ a{
   margin-top: 50px;
   margin-bottom: 2.5rem;
 }
-.tituloSecao h2{
+
+.tituloSecao h2 {
   margin-left: 4rem;
   margin-top: 2rem;
 }
 
-.texto{
+.texto {
   max-width: 500px;
   font-size: 1.25rem;
   text-align: justify;
   margin-left: 4rem;
 }
 
-.fotoSecao{
+.fotoSecao {
   border-radius: 25px;
   margin-right: 2.5rem;
 }
- 
+
 
 .google-maps iframe {
   max-width: 358px;
@@ -76,21 +77,21 @@ a{
   margin-right: 2.5rem;
 }
 
-#insta{
+#insta {
   margin-right: 0;
   margin-top: 0;
   margin-bottom: -5px;
-  
+
 }
 
-footer h4{
+footer h4 {
   text-align: center;
-  background-color:#FBFB06 ;
+  background-color: #FBFB06;
   padding: 1.5rem;
-  align-content:end;
+  align-content: end;
 }
 
-footer{
+footer {
   bottom: 0;
   max-width: 100%;
   text-align: center;
